Kubernetes/cks/minimize-vul/opa/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata: 
  name: systemrequiredlabels
spec:
  crd:
    spec:
      names:
        kind: SystemRequiredLabel
      validation:
      # Schema for the `parameters` field
        openAPIV#Schema:
          properties:
            labels:
              type: array
              items:
                type: string    
  targets:
    - target:
      rego: |
      package systemrequiredlabels
      import data.lib.helpers
      violation[{"msg": msg, "details": {"missing_labels": missing}] {
          provided := {label | input.parameters.labels[_]}
          required := {label | label := ["billing"]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("you must provide labels : %v", [missing])
      }
